# cmd/server/api/rpc_get_job_logs.go
@@ -1,0 +1,21 @@
+package api
+
+import (
+	"context"
+	sparkpb "github.com/zcubbs/spark/gen/proto/go/spark/v1"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+)
+
+func (s *Server) GetJobLogs(ctx context.Context, req *sparkpb.GetJobLogsRequest) (*sparkpb.GetJobLogsResponse, error) {
+	// Get the job logs
+	logs, err := s.k8sRunner.GetLogs(ctx, req.JobId)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "failed to get logs: %v", err)
+	}
+
+	// Return the logs
+	return &sparkpb.GetJobLogsResponse{
+		Logs: logs,
+	}, nil
+}
